# TravellerSalesman

./: CMakeLists.txt  main.cpp
FileReader/: FileReader.cpp  FileReader.h
Graph/: Graph.cpp  Graph.h
Lexicographical Generator/: lexicographical_combination_generator.cpp  lexicographical_combination_generator.h
Node/: Node.cpp  Node.h
instancias_PCV/: soluЗ╞o pcv04.txt  test.txt
